<resources>
    <string name="app_name">UserListApp</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_user">Add user</string>
    <string name="get_all_users">Get all users</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="upload_an_avatar">Upload an avatar</string>
    <string name="upload">Upload</string>
    <string name="delete_user">Delete user</string>
    <string name="update_user">Update user</string>
    <string name="replace_an_avatar">Replace an avatar</string>
    <string name="image_avatar">avatar\n</string>
    <string name="search_hint">Search a user...</string>
    <string name="cancel">Cancel</string>
    <string name="full_name">Full name</string>
    <string name="click_to_update">Click to update/delete</string>
    <string name="edit_save">Edit user</string>
    <string name="refresh">refresh</string>
</resources>