<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/colorAccent"
    android:padding="16dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_user"
        android:textColor="@color/colorButtonText"
        android:padding="16dp"
        android:layout_margin="8dp"
        app:cornerRadius="8dp"
        app:backgroundTint="@color/colorButtonBackground" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_get_all_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_all_users"
        android:textColor="@color/colorButtonText"
        android:padding="16dp"
        android:layout_margin="8dp"
        app:cornerRadius="8dp"
        app:backgroundTint="@color/colorButtonBackground" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_user"
        android:textColor="@color/colorButtonText"
        android:padding="16dp"
        android:layout_margin="8dp"
        app:cornerRadius="8dp"
        app:backgroundTint="@color/colorButtonBackground" />
</LinearLayout>
